# synthrush

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
data/levels/: test.json
src/: audioProc.cpp  audioProc.h  entity.h  game.cpp  game.h  levelData.h  main.cpp  random.cpp  random.h  scene.h
src/entities/: enemy.cpp  enemy.h
src/scenes/: gameScene.cpp  gameScene.h
src/ui/: button.cpp  button.h
